CSS fix for horizontal scrolling

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -40,7 +40,9 @@ article, aside, details, figcaption, figure, footer, header, menu, nav, section 
 
 html, body, {
   width: 100%;
+  max-width: 100%;
   height: 100%;
+  overflow-x: hidden;
 
   background-color: @main-background-color;
   /*background-color: orange;*/
@@ -67,7 +69,7 @@ section.container, section.page-container, section.content {
 }
 
 .mobile-menu {
-  display: none;
+
   width: @mobile-menu-width;
   overflow: hidden;
   position: absolute;
@@ -115,8 +117,8 @@ section.page-container {
   position: absolute;
   left: 1em;
   top: 1em;
-  width: 3em;
-  height: 3em;
+  width: 5em;
+  height: 5em;
   background: @main-background-color url('/assets/images/icon-menu.svg') no-repeat center center;
   .border(1px, #444, 3px);
   z-index: 5;
